made Value builders zero copy