@@ -17,6 +17,7 @@
  */
 package io.sapl.api.model;
 
+import lombok.val;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -78,13 +79,13 @@ class ArrayValueTests {
             ArrayValue result;
 
             switch (description) {
-            case "add()"              ->
-                result = ArrayValue.builder().add(Value.of(1)).add(Value.of(2)).add(Value.of(3)).build();
-            case "addAll(varargs)"    ->
-                result = ArrayValue.builder().addAll(Value.of(1), Value.of(2), Value.of(3)).build();
-            case "addAll(collection)" ->
-                result = ArrayValue.builder().addAll(List.of(Value.of(1), Value.of(2), Value.of(3))).build();
-            default                   -> throw new IllegalArgumentException("Unknown case: " + description);
+                case "add()"              ->
+                        result = ArrayValue.builder().add(Value.of(1)).add(Value.of(2)).add(Value.of(3)).build();
+                case "addAll(varargs)"    ->
+                        result = ArrayValue.builder().addAll(Value.of(1), Value.of(2), Value.of(3)).build();
+                case "addAll(collection)" ->
+                        result = ArrayValue.builder().addAll(List.of(Value.of(1), Value.of(2), Value.of(3))).build();
+                default                   -> throw new IllegalArgumentException("Unknown case: " + description);
             }
 
             assertThat(result).containsExactlyElementsOf(expected);
@@ -96,6 +97,192 @@ class ArrayValueTests {
             var result = ArrayValue.builder().add(Value.of(1)).secret().build();
 
             assertThat(result.secret()).isTrue();
+        }
+
+        @Test
+        @DisplayName("Builder cannot be reused after build()")
+        void builderCannotBeReused() {
+            var builder = ArrayValue.builder();
+            var first   = builder.add(Value.of(1)).build();
+
+            assertThat(first).hasSize(1);
+            assertThatThrownBy(() -> builder.add(Value.of(2)))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("already been used");
+        }
+
+        @Test
+        @DisplayName("Builder throws on add after build()")
+        void builderThrowsOnAddAfterBuild() {
+            var builder = ArrayValue.builder().add(Value.of("Necronomicon"));
+            builder.build();
+
+            assertThatThrownBy(() -> builder.add(Value.of("De Vermis Mysteriis")))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("already been used");
+        }
+
+        @Test
+        @DisplayName("Builder throws on addAll(varargs) after build()")
+        void builderThrowsOnAddAllVarargsAfterBuild() {
+            var builder = ArrayValue.builder().add(Value.of("Cthulhu"));
+            builder.build();
+
+            assertThatThrownBy(() -> builder.addAll(Value.of("Yog-Sothoth"), Value.of("Nyarlathotep")))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("already been used");
+        }
+
+        @Test
+        @DisplayName("Builder throws on addAll(collection) after build()")
+        void builderThrowsOnAddAllCollectionAfterBuild() {
+            var builder = ArrayValue.builder().add(Value.of("R'lyeh"));
+            builder.build();
+
+            var moreLocations = List.of(Value.of("Innsmouth"), Value.of("Arkham"));
+            assertThatThrownBy(() -> builder.addAll(moreLocations))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("already been used");
+        }
+
+        @Test
+        @DisplayName("Builder throws on secret after build()")
+        void builderThrowsOnSecretAfterBuild() {
+            var builder = ArrayValue.builder().add(Value.of("forbidden knowledge"));
+            builder.build();
+
+            assertThatThrownBy(builder::secret)
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("already been used");
+        }
+
+        @Test
+        @DisplayName("Builder throws on multiple build() calls")
+        void builderThrowsOnMultipleBuildCalls() {
+            var builder = ArrayValue.builder().add(Value.of("elder sign"));
+            builder.build();
+
+            assertThatThrownBy(builder::build)
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("already been used");
+        }
+
+        @Test
+        @DisplayName("Builder secret() before add() marks subsequent elements as secret")
+        void secretBeforeAddMarksElementsSecret() {
+            var grimoire = ArrayValue.builder()
+                    .secret()
+                    .add(Value.of("Ritual of Summoning"))
+                    .add(Value.of("Rites of Protection"))
+                    .build();
+
+            assertThat(grimoire.secret()).isTrue();
+            var element0 = grimoire.getFirst();
+            assertThat(element0).isNotNull();
+            assertThat(element0.secret()).isTrue();
+            var element1 = grimoire.get(1);
+            assertThat(element1).isNotNull();
+            assertThat(element1.secret()).isTrue();
+        }
+
+        @Test
+        @DisplayName("Builder secret() after add() marks existing elements as secret")
+        void secretAfterAddMarksElementsSecret() {
+            var cultists = ArrayValue.builder()
+                    .add(Value.of("Wilbur Whateley"))
+                    .add(Value.of("Lavinia Whateley"))
+                    .secret()
+                    .build();
+
+            assertThat(cultists.secret()).isTrue();
+            var element0 = cultists.getFirst();
+            assertThat(element0).isNotNull();
+            assertThat(element0.secret()).isTrue();
+            var element1 = cultists.get(1);
+            assertThat(element1).isNotNull();
+            assertThat(element1.secret()).isTrue();
+        }
+
+        @Test
+        @DisplayName("Builder addAll(varargs) with secret builder marks all elements as secret")
+        void addAllVarargsWithSecretBuilderMarksSecret() {
+            var elderSigns = ArrayValue.builder()
+                    .secret()
+                    .addAll(Value.of("Pentagram"), Value.of("Eye"), Value.of("Star"))
+                    .build();
+
+            assertThat(elderSigns.secret()).isTrue();
+            elderSigns.forEach(element -> {
+                assertThat(element).isNotNull();
+                assertThat(element.secret()).isTrue();
+            });
+        }
+
+        @Test
+        @DisplayName("Builder addAll(collection) then secret() marks all elements as secret")
+        void addAllCollectionThenSecretMarksSecret() {
+            var tomes = List.of(Value.of("Necronomicon"), Value.of("Pnakotic Manuscripts"), Value.of("Book of Eibon"));
+            var library = ArrayValue.builder()
+                    .addAll(tomes)
+                    .secret()
+                    .build();
+
+            assertThat(library.secret()).isTrue();
+            library.forEach(element -> {
+                assertThat(element).isNotNull();
+                assertThat(element.secret()).isTrue();
+            });
+        }
+
+        @Test
+        @DisplayName("Builder secret() is idempotent")
+        void secretIdempotency() {
+            var incantations = ArrayValue.builder()
+                    .add(Value.of("Ph'nglui mglw'nafh"))
+                    .secret()
+                    .secret()
+                    .add(Value.of("Cthulhu R'lyeh"))
+                    .secret()
+                    .build();
+
+            assertThat(incantations.secret()).isTrue();
+            incantations.forEach(element -> {
+                assertThat(element).isNotNull();
+                assertThat(element.secret()).isTrue();
+            });
+        }
+
+        @Test
+        @DisplayName("Builder mixed operations maintain secret consistency")
+        void mixedOperationsMaintainSecretConsistency() {
+            var ritualItems = ArrayValue.builder()
+                    .add(Value.of("candles"))
+                    .secret()
+                    .addAll(Value.of("incense"), Value.of("chalice"))
+                    .add(Value.of("dagger"))
+                    .build();
+
+            assertThat(ritualItems.secret()).isTrue();
+            assertThat(ritualItems).hasSize(4);
+            ritualItems.forEach(element -> {
+                assertThat(element).isNotNull();
+                assertThat(element.secret()).isTrue();
+            });
+        }
+
+        @Test
+        @DisplayName("Builder with non-secret addAll preserves element states")
+        void nonSecretAddAllPreservesStates() {
+            var locations = List.of(Value.of("Arkham"), Value.of("Innsmouth"), Value.of("Dunwich"));
+            var places = ArrayValue.builder()
+                    .addAll(locations)
+                    .build();
+
+            assertThat(places.secret()).isFalse();
+            places.forEach(element -> {
+                assertThat(element).isNotNull();
+                assertThat(element.secret()).isFalse();
+            });
         }
     }
 
@@ -270,7 +457,7 @@ class ArrayValueTests {
     static Stream<Arguments> provideSecretPropagationMethods() {
         return Stream.of(
                 Arguments.of("get()",
-                        (java.util.function.Function<ArrayValue, Stream<Value>>) arr -> Stream.of(arr.get(0))),
+                        (java.util.function.Function<ArrayValue, Stream<Value>>) arr -> Stream.of(arr.getFirst())),
                 Arguments.of("iterator()", (java.util.function.Function<ArrayValue, Stream<Value>>) arr -> {
                     var values = new ArrayList<Value>();
                     arr.iterator().forEachRemaining(values::add);
@@ -283,8 +470,7 @@ class ArrayValueTests {
                         (java.util.function.Function<ArrayValue, Stream<Value>>) arr -> Arrays.stream(arr.toArray())
                                 .map(o -> (Value) o)),
                 Arguments.of("forEach()", (java.util.function.Function<ArrayValue, Stream<Value>>) arr -> {
-                    var values = new ArrayList<Value>();
-                    arr.forEach(values::add);
+                    val values = new ArrayList<Value>(arr);
                     return values.stream();
                 }));
     }
@@ -328,7 +514,7 @@ class ArrayValueTests {
                         Arguments.of(new ArrayValue(List.of(Value.of(1), Value.of(2)), false), "1, 2", "simple values"),
                         Arguments.of(new ArrayValue(List.of(Value.of(1)), true), "***SECRET***", "secret array"),
                         Arguments.of(new ArrayValue(
-                                List.of(new ArrayValue(List.of(Value.of(1), Value.of(2)), false), Value.of(3)), false),
+                                        List.of(new ArrayValue(List.of(Value.of(1), Value.of(2)), false), Value.of(3)), false),
                                 "[1, 2]", "nested arrays"),
                         Arguments.of(new ArrayValue(List.of(Value.of(1), Value.of("text"), Value.of(true), Value.NULL,
                                 Value.UNDEFINED, Value.error("test")), false), "ERROR", "mixed types"));
